--- a/lddi.continua.bluetooth/uaal/samples/ContinuaManager/ContinuaManager/pom.xml
+++ b/lddi.continua.bluetooth/uaal/samples/ContinuaManager/ContinuaManager/pom.xml
@@ -4,13 +4,13 @@
 		<artifactId>lddi.pom</artifactId>
 		<groupId>org.universAAL.lddi</groupId>
 <!-- updated version due to dependency conflicts -->
-		<version>1.2.2-SNAPSHOT</version>
+		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.universAAL.continua</groupId>
 	<artifactId>uaalContinuaManagerClient</artifactId>
 <!-- updated version -->
-	<version>1.2.2-SNAPSHOT</version>
+	<version>${parent.version}</version>
 	<packaging>bundle</packaging>
 	<name>uAAL Continua Manager Client</name>
 	<description>Continua Health Alliance agent event publisher</description>
@@ -40,6 +40,9 @@
 						<Bundle-NativeCode><!--
 						From the BundleNative javadoc: f you have more than one library for the same environment then you 
 						should include all of the libraries for that environment in the same Bundle-NativeCode entry.-->
+							hdpNativeLib_win_x86_32.dll;
+							osname=win32;
+							processor=x86; processor=x86_32
 							libHDPnative_unix_32.so;
 							osname=Linux;
 							processor=x86; processor=x86_32
@@ -67,7 +70,7 @@
 		<dependency>
 			<groupId>org.universAAL.continua</groupId>
 			<artifactId>ieee.x73.std</artifactId>
-			<version>1.1.0</version>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
