--- a/lddi.continua.bluetooth/uaal/Continua manager ontology/ont.continuahealthmanager/pom.xml
+++ b/lddi.continua.bluetooth/uaal/Continua manager ontology/ont.continuahealthmanager/pom.xml
@@ -3,25 +3,23 @@
 	<parent>
 		<artifactId>ont.pom</artifactId>
 		<groupId>org.universAAL.ontology</groupId>
-		<version>1.2.0</version>
+		<version>1.3.1-SNAPSHOT</version>
 		<relativePath>../pom/pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>ont.continuahealthmanager</artifactId>
 	<name>uAAL ontology for Continua Health Alliance managers</name>
-	<version>1.2.2-SNAPSHOT</version>
+	<version>${parent.version}</version>
 	<description>Continua Health Manager ontology</description>
 	<packaging>bundle</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
-			<artifactId>org.osgi.core</artifactId>
-			<version>1.0.1</version>
+			<artifactId>org.osgi.core</artifactId>			
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.data.representation.osgi</artifactId>
-			<version>1.2.0</version>
+			<artifactId>mw.data.representation.osgi</artifactId>			
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
