--- a/lddi.continua.bluetooth/uaal/Continua manager service/continua.hdp.manager/pom.xml
+++ b/lddi.continua.bluetooth/uaal/Continua manager service/continua.hdp.manager/pom.xml
@@ -4,13 +4,13 @@
 		<artifactId>lddi.pom</artifactId>
 		<groupId>org.universAAL.lddi</groupId>
 <!-- updated version due to dependency conflicts -->
-		<version>1.2.2-SNAPSHOT</version>
+		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.universAAL.continua</groupId>
 	<artifactId>lddi.continuahdpmanagerservice</artifactId>
 <!-- updated version -->
-	<version>1.2.2-SNAPSHOT</version>
+	<version>${parent.version}</version>
 	<packaging>bundle</packaging>
 	<name>uAAL Continua Manager service</name>
 	<description>Continua Health Alliance gateway</description>
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>org.universAAL.continua</groupId>
 			<artifactId>ieee.x73.std</artifactId>
-			<version>1.1.0</version>
+			<version>1.3.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
@@ -89,7 +89,7 @@
 	<dependency>
 		<groupId>org.universAAL.ontology</groupId>
 		<artifactId>ont.continuahealthmanager</artifactId>
-		<version>1.2.2-SNAPSHOT</version>
+		<version>1.3.1-SNAPSHOT</version>
 	</dependency>	
 	</dependencies>		
 </project>
