--- a/lddi.continua.bluetooth/uaal/samples/continua.hdp.manager.caller.test/pom.xml
+++ b/lddi.continua.bluetooth/uaal/samples/continua.hdp.manager.caller.test/pom.xml
@@ -4,13 +4,13 @@
 		<artifactId>lddi.pom</artifactId>
 		<groupId>org.universAAL.lddi</groupId>
 <!-- updated version due to dependency conflicts -->
-		<version>1.2.2-SNAPSHOT</version>
+		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.universAAL.continua</groupId>
 	<artifactId>lddi.continuahdpmanager.caller.test</artifactId>
 <!-- updated version -->
-	<version>1.2.2-SNAPSHOT</version>
+	<version>${parent.version}</version>
 	<packaging>bundle</packaging>
 	<name>uAAL Continua Manager service caller test</name>
 	<description>Caller test to request Continua Health Alliance manager services</description>
@@ -73,7 +73,7 @@
 	<dependency>
 		<groupId>org.universAAL.ontology</groupId>
 		<artifactId>ont.continuahealthmanager</artifactId>
-		<version>1.2.2-SNAPSHOT</version>
+		<version>1.3.1-SNAPSHOT</version>
 	</dependency>		
 	</dependencies>		
 </project>
