--- a/lddi.continua.bluetooth/uaal/samples/ContinuaManager/win/uaalContinuaManagerClient_win/pom.xml
+++ b/lddi.continua.bluetooth/uaal/samples/ContinuaManager/win/uaalContinuaManagerClient_win/pom.xml
@@ -7,8 +7,8 @@
 		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.universAAL.continua</groupId>
-	<artifactId>uaalContinuaManagerClient</artifactId>
+	<groupId>org.universAAL.lddi.continua</groupId>
+	<artifactId>lddi.uaalContinuaManagerClient</artifactId>
 <!-- updated version -->
 	<version>${parent.version}</version>
 	<packaging>bundle</packaging>
