--- a/lddi.knx.library/pom.xml
+++ b/lddi.knx.library/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.3-SNAPSHOT</version>
     <relativePath>../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.knx.library</artifactId>
-  <version>1.3.2-SNAPSHOT</version>
+  <version>1.3.3-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI KNX Datapoint Type Library</name>
   <description>KNX Device Categories for OSGi DeviceManager are Interfaces for all KNX Datapoint Types specifying methods for communication with device services.</description>
@@ -73,7 +73,7 @@
             <Export-Package>org.universAAL.lddi.knx.devicecategory,
 						org.universAAL.lddi.knx.devicemodel,
 						org.universAAL.lddi.knx.networkdriver,
-						org.universAAL.lddi.knx.devicedriver,
+						org.universAAL.lddi.knx.interfaces,
 						org.universAAL.lddi.knx.utils</Export-Package>
           </instructions>
         </configuration>
