--- a/lddi.knx.devicemanager/launches/pom.xml
+++ b/lddi.knx.devicemanager/launches/pom.xml
@@ -18,7 +18,7 @@
 	<properties>
 <!--		<mw.snapshot.version>1.1.1-SNAPSHOT</mw.snapshot.version>-->
 <!--		<mw.release.version>1.1.0</mw.release.version>-->
-		<lddi.snapshot.version>1.3.1-SNAPSHOT</lddi.snapshot.version>
+<!--		<lddi.snapshot.version>1.3.1-SNAPSHOT</lddi.snapshot.version>-->
 <!--		<lddi.release.version>1.1.0</lddi.release.version>-->
 	</properties>
 	
@@ -31,6 +31,10 @@
 				<configuration>
 					<args>pax.configuration</args>
 					<provision>
+					
+					<provision>scan-composite:file:artifact.composite</provision>
+					
+					
 						<!-- MW -->
 							<!-- <provision>scan-composite:mvn:org.universAAL.middleware/mw.composite/1.1.0/composite</provision> -->
 						<!-- Ontologies -->
@@ -58,13 +62,19 @@
 						<!-- config from composite; changed versions of mw-bundles as in my lddi testing frameworks -->
 <!--   							<provision>scan-bundle:wrap:mvn:org.bouncycastle/jce.jdk13/144</provision>
 								<provision>scan-bundle:mvn:org.universAAL.middleware/mw.container.xfaces/${mw.release.version}</provision> -->
-							<provision>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-api/1.6.2</provision>
-							<provision>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-service/1.6.2</provision>
- 							<provision>scan-bundle:mvn:org.apache.felix/org.osgi.compendium/1.4.0</provision>
-							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.log/1.0.1</provision>
-							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.configadmin/1.2.4</provision>
+
+
+
+<!--							<provision>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-api/1.6.2</provision>-->
+<!--							<provision>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-service/1.6.2</provision>-->
+<!-- 							<provision>scan-bundle:mvn:org.apache.felix/org.osgi.compendium/1.4.0</provision>-->
+<!--							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.log/1.0.1</provision>-->
+<!--							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.configadmin/1.2.4</provision>-->
 <!-- 							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.fileinstall/3.1.10</provision> -->
-							<provision>scan-bundle:mvn:org.ops4j.pax.confman/pax-confman-propsloader/0.2.2</provision>
+<!--							<provision>scan-bundle:mvn:org.ops4j.pax.confman/pax-confman-propsloader/0.2.2</provision>-->
+
+
+
 							
 <!-- 								<provision>scan-bundle:mvn:org.universAAL.middleware/mw.container.osgi/${mw.release.version}</provision> -->
 							
@@ -85,33 +95,23 @@
 							<provision>scan-bundle:wrap:mvn:jp.go.ipa/jgcl/1.0</provision>
 							<provision>scan-bundle:wrap:mvn:org.osgi/osgi_R4_compendium/1.0</provision>
  -->
-<!--  							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.dependencymanager/3.0.0@nostart</provision>
-							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.devicemanager/0.9.0-SNAPSHOT</provision>
- -->
-							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.library/${lddi.snapshot.version}@nostart</provision>
-<!-- 							<provision>scan-bundle:mvn:org.universAAL.lddi/iso11073.library/${lddi.snapshot.version}@nostart</provision>
- -->
-<!-- 							<provision>scan-bundle:mvn:org.universAAL.ontology/ont.activityhub/0.0.5-SNAPSHOT</provision>
- -->
-							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.networkdriver/${lddi.snapshot.version}</provision>
-<!-- 							<provision>scan-bundle:mvn:org.universAAL.lddi/knx.dpt1refinementdriver.iso11073/${lddi.snapshot.version}</provision>
- -->
- <!-- 							<provision>scan-bundle:mvn:org.universAAL.lddi/hw.exporter.activityhub/0.0.3-SNAPSHOT</provision>
-							<provision>scan-bundle:mvn:org.universAAL.lddi/smp.activityhub.client/0.0.3-SNAPSHOT@nostart</provision>
- -->
- 							<provision>scan-bundle:wrap:mvn:org.jdom/jdom/1.1.3</provision>
-							<provision>scan-bundle:wrap:mvn:jaxen/jaxen/1.1.3</provision>
-							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.devicemanager/${lddi.snapshot.version}@nostart</provision>
+<!--							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.library/${lddi.snapshot.version}@nostart</provision>-->
 
- 							<provision>scan-bundle:wrap:mvn:javax.servlet/servlet-api/2.5</provision>
-							<provision>scan-bundle:mvn:org.mortbay.jetty/jetty-util/6.1.24</provision>
-							<provision>scan-bundle:mvn:org.mortbay.jetty/servlet-api/2.5-20081211</provision>
-							<provision>scan-bundle:mvn:org.mortbay.jetty/jetty/6.1.24</provision>
-							<provision>scan-bundle:mvn:org.mortbay.jetty/jetty-sslengine/6.1.24</provision>
-							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.http.api/2.2.0</provision>
-							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.http.base/2.2.0</provision>
-							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.http.jetty/2.2.0</provision>
-							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole/3.1.8</provision>
+<!--							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.networkdriver/${lddi.snapshot.version}</provision>-->
+
+<!-- 							<provision>scan-bundle:wrap:mvn:org.jdom/jdom/1.1.3</provision>-->
+<!--							<provision>scan-bundle:wrap:mvn:jaxen/jaxen/1.1.3</provision>-->
+<!--							<provision>scan-bundle:mvn:org.universAAL.lddi/lddi.knx.devicemanager/${lddi.snapshot.version}@nostart</provision>-->
+<!---->
+<!-- 							<provision>scan-bundle:wrap:mvn:javax.servlet/servlet-api/2.5</provision>-->
+<!--							<provision>scan-bundle:mvn:org.mortbay.jetty/jetty-util/6.1.24</provision>-->
+<!--							<provision>scan-bundle:mvn:org.mortbay.jetty/servlet-api/2.5-20081211</provision>-->
+<!--							<provision>scan-bundle:mvn:org.mortbay.jetty/jetty/6.1.24</provision>-->
+<!--							<provision>scan-bundle:mvn:org.mortbay.jetty/jetty-sslengine/6.1.24</provision>-->
+<!--							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.http.api/2.2.0</provision>-->
+<!--							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.http.base/2.2.0</provision>-->
+<!--							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.http.jetty/2.2.0</provision>-->
+<!--							<provision>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole/3.1.8</provision>-->
 
 
 	  				</provision>
