--- a/lddi.knx.devicemanager/pom.xml
+++ b/lddi.knx.devicemanager/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.3-SNAPSHOT</version>
     <relativePath>../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.knx.devicemanager</artifactId>
-  <version>1.3.2-SNAPSHOT</version>
+  <version>1.3.3-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI KNX device manager</name>
   <description>This bundle reads KNX device configuration from XML files (exported by ETS4). A OSGI device service is registered in the framework for every KNX device.</description>
@@ -41,6 +41,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>org.universAAL.support</groupId>
+      <artifactId>itests</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.osgi.core</artifactId>
@@ -92,12 +96,72 @@
           </instructions>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.5</version>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>launches</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>target</directory>
+                  <filtering>true</filtering>
+                  <includes>
+                    <include>**/*.composite</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.universAAL.support</groupId>
+        <artifactId>uaal-maven-plugin</artifactId>
+        <configuration>
+          <startArtifacts>
+            <artifact>
+              <groupId>org.universAAL.lddi</groupId>
+              <artifactId>lddi.knx.devicemanager</artifactId>
+              <nostart>true</nostart>
+            </artifact>
+          </startArtifacts>
+        </configuration>
+      </plugin>      
     </plugins>
   </build>
   <profiles>
     <profile>
       <id>uAAL-Runtime</id>
       <dependencies>
+        <dependency>
+          <groupId>org.universAAL.middleware</groupId>
+          <artifactId>mw.data.serialization.osgi</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.universAAL.lddi</groupId>
+          <artifactId>lddi.knx.library</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.universAAL.lddi</groupId>
+          <artifactId>lddi.knx.networkdriver</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>org.apache.felix.http.jetty</artifactId>
+          <version>2.2.0</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>org.apache.felix.webconsole</artifactId>
+          <version>3.1.8</version>
+        </dependency>
         <dependency>
           <groupId>jaxen</groupId>
           <artifactId>jaxen</artifactId>
