--- a/lddi.hw.exporter.activityhub/conf/services/lddi.knx.networkdriver.properties
+++ b/lddi.hw.exporter.activityhub/conf/services/lddi.knx.networkdriver.properties
@@ -1,19 +1,11 @@
-# NETWORK CONFIGURATION
-# ------------------------------
-# Time between two consecutive tests of the connection to the KNX gateway (at startup)
-sleepTime=10000
-# Time between two consecutive tests of the connection to the KNX gateway (after)
-checkingTime=10000
-timeoutTime=20000
-numTry=33
-# Network settings for KnxWriter
-# KNX gateway = house
+# Network settings for KnxReader/KnxWriter
+# KNX multicast address is 224.0.23.12; Udp Port is 3671
+multicastIp=224.0.23.12
+multicastUdpPort=3671
+#
+# IP of computer running knxnetworkdriver
+myIP=192.168.60.107
+#
+# IP of KNX/IP network
 knxGatewayIp=192.168.60.139
 knxGatewayPort=3671
-#
-# Network settings for KnxReader
-# KNX multicast address is 224.0.23.12
-multicastIp=224.0.23.12
-udpPort=3671
-myIP=192.168.60.107
-
