added lddi.knx.exporter module

--- a/lddi.pom/composite/pom.xml
+++ b/lddi.pom/composite/pom.xml
@@ -28,6 +28,10 @@
     </dependency>
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
+      <artifactId>lddi.knx.exporter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.knx.devicemanager</artifactId>
     </dependency>
     <dependency>
