--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -21,6 +21,7 @@
     <module>../lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/</module>
     <module>../lddi.knx.devicemanager/</module>
     <module>../lddi.hw.exporter.activityhub/</module>
+    <module>../lddi.knx.exporter/</module>
     <module>composite</module>
   </modules>
   <scm>
@@ -79,6 +80,11 @@
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.hw.exporter.activityhub</artifactId>
+        <version>1.3.3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.knx.exporter</artifactId>
         <version>1.3.3-SNAPSHOT</version>
       </dependency>
       <dependency>
