ont parent pom applied to ieee.x73.std (move to ont svn?). continua artefacts group id renamed from org.universAAL.continua to org.universAAL.lddi

--- a/lddi.continua.bluetooth/uaal/samples/ContinuaManager/ContinuaManager/pom.xml
+++ b/lddi.continua.bluetooth/uaal/samples/ContinuaManager/ContinuaManager/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.universAAL.continua</groupId>
+	<groupId>org.universAAL.lddi.continua</groupId>
 	<artifactId>uaalContinuaManagerClient</artifactId>
 <!-- updated version -->
 	<version>${parent.version}</version>
