--- a/lddi.continua.bluetooth/uaal/libraries/ieee.x73.std/pom.xml
+++ b/lddi.continua.bluetooth/uaal/libraries/ieee.x73.std/pom.xml
@@ -1,9 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.universAAL.continua</groupId>
+	<parent>
+    <groupId>org.universAAL.ontology</groupId>
+    <artifactId>ont.pom</artifactId>
+    <version>1.3.1-SNAPSHOT</version>
+    <relativePath>../ont.pom</relativePath>
+  </parent>
   <artifactId>ieee.x73.std</artifactId>
   <version>1.3.1-SNAPSHOT</version>
-  <name>IEEE x073 standard implementation</name>
+  <name>universAAL Ontology IEEE x073 standard implementation</name>
   <description>Java implementation of Continua Health Alliance standard (ISO/IEEE x073)</description>
   <organization>
   	<name>TSB Technologies for Health and Well-being</name>
