--- a/lddi.continua.bluetooth/uaal/samples/ContinuaManager/win/uaalContinuaManagerClient_win/pom.xml
+++ b/lddi.continua.bluetooth/uaal/samples/ContinuaManager/win/uaalContinuaManagerClient_win/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.3.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.universAAL.lddi.continua</groupId>
+	<groupId>org.universAAL.lddi</groupId>
 	<artifactId>lddi.uaalContinuaManagerClient</artifactId>
 <!-- updated version -->
 	<version>${parent.version}</version>
