--- a/.gitattributes
+++ b/.gitattributes
@@ -702,6 +702,7 @@ lddi.continua.bluetooth/uaal/native_libs/unix/unix_64/NOTICE.txt -text
 lddi.continua.bluetooth/uaal/native_libs/unix/unix_64/libHDPnative_unix_64.so.zip -text
 lddi.continua.bluetooth/uaal/native_libs/windows/HDPNativeDll.cpp -text
 lddi.continua.bluetooth/uaal/native_libs/windows/HDPNativeDll.h -text
+lddi.continua.bluetooth/uaal/native_libs/windows/HDPNativeDll.vcxproj -text
 lddi.continua.bluetooth/uaal/native_libs/windows/x86_32/ASL2.0.txt -text
 lddi.continua.bluetooth/uaal/native_libs/windows/x86_32/MITX.txt -text
 lddi.continua.bluetooth/uaal/native_libs/windows/x86_32/NOTICE.txt -text
