--- a/lddi.knx.exporter/pom.xml
+++ b/lddi.knx.exporter/pom.xml
@@ -94,8 +94,8 @@
 	<!-- Ontology for temperature -->
 	<dependency>
       <groupId>org.universAAL.ontology</groupId>
-      <artifactId>org.universAAL.ontology.device</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <artifactId>ont.device</artifactId>
+      <!-- <version>1.3.1-SNAPSHOT</version> -->
     </dependency>
     
   </dependencies>
