--- a/lddi.zigbee.exporter/pom.xml
+++ b/lddi.zigbee.exporter/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath>../lddi.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>lddi.zigbee.exporter</artifactId>
-	<version>1.3.1-SNAPSHOT</version>
+	<version>1.3.2-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	
 	<!-- ______________________________________________________ -->
@@ -96,9 +96,9 @@
 			<version>0.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>it.cnr.isti.uAAL</groupId>
-			<artifactId>it.cnr.isti.uAAL.adapter</artifactId>
-			<version>0.2.1</version>
+			<groupId>lddi.zigbee.commissioning</groupId>
+			<artifactId>lddi.zigbee.commissioning.adapter</artifactId>
+			<version>0.3</version>
 		</dependency>
 	</dependencies>
 	
@@ -119,7 +119,10 @@
 					</instructions>
 				</configuration>
 			</plugin>
+			
 		</plugins>
+		
+
 	</build>
 	
 	<!-- ______________________________________________________ -->
@@ -148,5 +151,5 @@
 			</releases>
 		</repository>
 	</repositories>
-	
+                
 </project>
