--- a/lddi.zigbee.commissioning/pom.xml
+++ b/lddi.zigbee.commissioning/pom.xml
@@ -2,10 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>lddi.zigbee.commissioning</groupId>
+	<parent>
+		<groupId>org.universAAL.lddi</groupId>
+		<artifactId>lddi.pom</artifactId>
+		<version>1.3.1-SNAPSHOT</version>
+		<relativePath>../lddi.pom/pom.xml</relativePath>
+	</parent>
 	<artifactId>lddi.zigbee.commissioning.adapter</artifactId>
-	<version>0.3</version>
-	<packaging>bundle</packaging>
+	<version>0.3.0-SNAPSHOT</version>
 
 	<name>uAAL ZB40 commissioning bundle</name>
 
