fix for zigbee.commissioning.adapter import

--- a/lddi.zigbee.exporter/pom.xml
+++ b/lddi.zigbee.exporter/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
 		<artifactId>lddi.pom</artifactId>
@@ -12,9 +12,9 @@
 	<artifactId>lddi.zigbee.exporter</artifactId>
 	<version>1.3.2-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	
+
 	<!-- ______________________________________________________ -->
-	
+
 	<name>ZigBee exporter for uAAL - Home Automation</name>
 	<description>Hardware exporter for universAAL: ZigBee technology devices</description>
 	<inceptionYear>2008</inceptionYear>
@@ -35,9 +35,9 @@
 	</organization>
 	<developers />
 	<contributors />
-	
+
 	<!-- ______________________________________________________ -->
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
@@ -96,14 +96,14 @@
 			<version>0.6.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>lddi.zigbee.commissioning</groupId>
+			<groupId>org.universaal.lddi</groupId>
 			<artifactId>lddi.zigbee.commissioning.adapter</artifactId>
-			<version>0.3</version>
+			<version>0.3.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
-	
+
 	<!-- ______________________________________________________ -->
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -111,7 +111,7 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
 				<configuration>
-					<instructions>	
+					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Activator>org.universAAL.hw.exporter.zigbee.ha.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
@@ -119,12 +119,12 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
-		
+
 
 	</build>
-	
+
 	<!-- ______________________________________________________ -->
 
 	<scm>
@@ -132,7 +132,7 @@
 		<developerConnection>${svn.base}/${artifactId}</developerConnection>
 		<url>${svn.base.url}${artifactId}</url>
 	</scm>
-	
+
 	<repositories>
 		<repository>
 			<id>aaloa</id>
@@ -151,5 +151,5 @@
 			</releases>
 		</repository>
 	</repositories>
-                
+
 </project>
