Renamed universaal to universAAL (I know...), re-included osgi.core and compendium dependencies, set packaging to bundle, removed <type> tags, fixed package names in POM

--- a/lddi.zigbee.commissioning/.settings/org.eclipse.m2e.core.prefs
+++ b/lddi.zigbee.commissioning/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,5 @@
+#Fri Feb 15 10:25:20 CET 2013
 activeProfiles=
 eclipse.preferences.version=1
-resolveWorkspaceProjects=true
+resolveWorkspaceProjects=false
 version=1
