--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,10 @@ lddi.pom/composite/.project
 lddi.pom/composite/.settings
 lddi.pom/composite/target
 lddi.pom/target
+lddi.zigbee.commissioning/.classpath
+lddi.zigbee.commissioning/.project
+lddi.zigbee.commissioning/.settings
+lddi.zigbee.commissioning/target
 lddi.zigbee.exporter/.classpath
 lddi.zigbee.exporter/.project
 lddi.zigbee.exporter/.settings
