--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -15,14 +15,14 @@
   <description></description>
   <inceptionYear>2010</inceptionYear>
   <modules>
-    <module>../lddi.knx.library/</module>
-    <module>../lddi.iso11073.library/</module>
+    <module>../lddi.knx.library</module>
+    <module>../lddi.iso11073.library</module>
     <module>../lddi.knx.networkdriver/</module>
-    <module>../lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/</module>
-    <module>../lddi.knx.devicemanager/</module>
-    <module>../lddi.hw.exporter.activityhub/</module>
-    <module>../lddi.knx.exporter/</module>
-    <module>../lddi.hw.simulator.activityhub/</module>
+    <module>../lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073</module>
+    <module>../lddi.knx.devicemanager</module>
+    <module>../lddi.hw.exporter.activityhub</module>
+    <module>../lddi.knx.exporter</module>
+    <module>../lddi.hw.simulator.activityhub</module>
     <module>composite</module>
   </modules>
   <scm>
