--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -17,7 +17,7 @@
   <modules>
     <module>../lddi.knx.library</module>
     <module>../lddi.iso11073.library</module>
-    <module>../lddi.knx.networkdriver/</module>
+    <module>../lddi.knx.networkdriver</module>
     <module>../lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073</module>
     <module>../lddi.knx.devicemanager</module>
     <module>../lddi.hw.exporter.activityhub</module>
