added snapshot repo (since super pom is there)

--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -107,6 +107,14 @@
   </dependencyManagement>
   <repositories>
     <repository>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <id>uaal_snapshots</id>
+      <name>universAAL Repositories</name>
+      <url>http://depot.universaal.org/maven-repo/snapshots/</url>
+    </repository>
+    <repository>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
