--- a/lddi.knx.exporter/launches/pom.xml
+++ b/lddi.knx.exporter/launches/pom.xml
@@ -5,15 +5,15 @@
 	<parent>
 		<groupId>org.universAAL.support</groupId>
 		<artifactId>support.pom</artifactId>
-		<version>1.2.1-SNAPSHOT</version>
+		<version>1.3.2-SNAPSHOT</version>
 	</parent>
 	
 	<groupId>org.universAAL.runners</groupId>
-	<artifactId>lddi.hw.exporter.activityhub</artifactId>
+	<artifactId>lddi.knx.exporter</artifactId>
 	<packaging>jar</packaging>
 	<version>1.2.2-SNAPSHOT</version>
 	<name>Runner Folder</name>
-	<description>PaxRunner configuration for lddi.hw.exporter.activityhub artifact</description>
+	<description>PaxRunner configuration for lddi.knx.exporter artifact</description>
 
 <!-- 	<properties>
 		<mw.snapshot.version>1.1.1-SNAPSHOT</mw.snapshot.version>
