--- a/lddi.hw.exporter.activityhub/pom.xml
+++ b/lddi.hw.exporter.activityhub/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.5-SNAPSHOT</version>
     <relativePath>../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.hw.exporter.activityhub</artifactId>
-  <version>1.3.3-SNAPSHOT</version>
+  <version>1.3.5-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI Exporter of ActivityHub devices (ISO 11073-10471)</name>
   <description>Hardware exporter of Home Automation components based on ISO 11073-10471 devices/model (health device communication - independent living activity hub) for the universAAL middleware</description>
@@ -127,7 +127,26 @@
               </resources>
             </configuration>
           </execution>
-        </executions>
+          <execution>
+            <id>copy-resources-for-mw2.0</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>launcher-mw2.0</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>target</directory>
+                  <filtering>true</filtering>
+                  <includes>
+                    <include>**/*.composite</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+		</executions>
       </plugin>
       <plugin>
         <groupId>org.universAAL.support</groupId>
