ieee.x73.std added to modules and dependencies, names all begin with universAAL LDDI, check of this added to lddi pom

--- a/lddi.continua.bluetooth/uaal/Continua manager service/continua.hdp.manager/pom.xml
+++ b/lddi.continua.bluetooth/uaal/Continua manager service/continua.hdp.manager/pom.xml
@@ -10,7 +10,7 @@
 <!-- updated version -->
 	<version>${parent.version}</version>
 	<packaging>bundle</packaging>
-	<name>uAAL Continua Manager service</name>
+	<name>universAAL LDDI Continua Manager service</name>
 	<description>Continua Health Alliance gateway</description>
 	<organization>
 		<name>TSB Technologies for Health and Well-being</name>
