--- a/lddi.continua.bluetooth/uaal/samples/continua.hdp.manager.caller.test/pom.xml
+++ b/lddi.continua.bluetooth/uaal/samples/continua.hdp.manager.caller.test/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>lddi.continuahdpmanager.caller.test</artifactId>
 	<version>1.3.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	<name>uAAL Continua Manager service caller test</name>
+	<name>universAAL LDDI Continua Manager service caller test</name>
 	<description>Caller test to request Continua Health Alliance manager services</description>
 	<organization>
 		<name>TSB Technologies for Health and Well-being</name>
