--- a/lddi.hw.exporter.x73/pom.xml
+++ b/lddi.hw.exporter.x73/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>lddi.hw.exporter.x73</artifactId>
   <version>1.2.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
-  <name>universAAL Local Device Discovery and Integration Exporter of ISO11073 devices (blood pressure, scale) for uAAL</name>
+  <name>universAAL LDDI Exporter of ISO11073 devices (blood pressure, scale) for uAAL</name>
   <description>Hardware exporter of devices based on ISO 11073 devices/model (health device communication) for the universAAL middleware</description>
   <inceptionYear>2012</inceptionYear>
   <organization>
