--- a/lddi.zigbee.commissioning/pom.xml
+++ b/lddi.zigbee.commissioning/pom.xml
@@ -12,7 +12,7 @@
 	<version>0.3.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
-	<name>uAAL ZB40 commissioning bundle</name>
+	<name>universAAL LDDI ZB40 commissioning bundle</name>
 
 	<repositories>
 		<repository>
