--- a/lddi.zigbee.exporter/pom.xml
+++ b/lddi.zigbee.exporter/pom.xml
@@ -15,7 +15,7 @@
 
 	<!-- ______________________________________________________ -->
 
-	<name>ZigBee exporter for uAAL - Home Automation</name>
+	<name>universAAL LDDI ZigBee exporter for uAAL - Home Automation</name>
 	<description>Hardware exporter for universAAL: ZigBee technology devices</description>
 	<inceptionYear>2008</inceptionYear>
 	<licenses>
