--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,14 @@ lddi.continua.bluetooth/uaal/samples/weighingScalePublisher_x073_Sample/.classpa
 lddi.continua.bluetooth/uaal/samples/weighingScalePublisher_x073_Sample/.project
 lddi.continua.bluetooth/uaal/samples/weighingScalePublisher_x073_Sample/.settings
 lddi.continua.bluetooth/uaal/samples/weighingScalePublisher_x073_Sample/target
+lddi.fs20/lddi.fs20.connector/.classpath
+lddi.fs20/lddi.fs20.connector/.project
+lddi.fs20/lddi.fs20.connector/.settings
+lddi.fs20/lddi.fs20.connector/target
+lddi.fs20/lddi.fs20.exporter/.classpath
+lddi.fs20/lddi.fs20.exporter/.project
+lddi.fs20/lddi.fs20.exporter/.settings
+lddi.fs20/lddi.fs20.exporter/target
 lddi.fs20/lddi.pom.fs20/.project
 lddi.fs20/lddi.pom.fs20/.settings
 lddi.fs20/lddi.pom.fs20/target
