--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -23,6 +23,7 @@
     <module>../lddi.knx.devicemanager</module>
     <module>../lddi.hw.exporter.activityhub</module>
     <module>../lddi.knx.exporter</module>
+    <module>../lddi.fs20/lddi.pom.fs20</module>
     <module>composite</module>
   </modules>
   <scm>
