--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -103,6 +103,11 @@
         <artifactId>ieee.x73.std</artifactId>
         <version>1.3.6-SNAPSHOT</version>
       </dependency>
+      <dependency>
+        <groupId>org.universAAL.ontology</groupId>
+        <artifactId>ont.X73</artifactId>
+        <version>1.3.3-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <repositories>
