removed x73 exporter from module list of parent (needs some adaptation to latest version first)

--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -24,8 +24,8 @@
     <module>../lddi.knx.exporter</module>
     <module>../lddi.fs20/lddi.pom.fs20</module>
 <!--    <module>../lddi.zigbee.exporter</module>
-    <module>../lddi.zigbee.commissioning</module>-->
-    <module>../lddi.hw.exporter.x73</module>
+    <module>../lddi.zigbee.commissioning</module>
+    <module>../lddi.hw.exporter.x73</module>-->
     <module>composite</module>
   </modules>
   <scm>
