--- a/lddi.fs20/lddi.fs20.exporter/pom.xml
+++ b/lddi.fs20/lddi.fs20.exporter/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.fs20</artifactId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>2.0.0</version>
     <relativePath>../lddi.pom.fs20</relativePath>
   </parent>
   <artifactId>lddi.fs20.exporter</artifactId>
-  <version>1.3.6-SNAPSHOT</version>
+  <version>2.0.0</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI FS20 Exporter</name>
   <description>Hardware exporter of FS20 Home Automation components for universAAL</description>
@@ -39,18 +39,18 @@
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.phWorld</artifactId>
     </dependency>
-     <dependency>
+    <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.device</artifactId>
     </dependency>
-     <dependency>
+    <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.activityhub</artifactId>
-    </dependency> 
-     <dependency>
+    </dependency>
+    <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.av</artifactId>
-    </dependency> 
+    </dependency>
     <dependency>
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.fs20.connector</artifactId>
