--- a/lddi.knx.exporter/pom.xml
+++ b/lddi.knx.exporter/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>1.3.6-SNAPSHOT</version>
+    <version>2.0.0</version>
     <relativePath>../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.knx.exporter</artifactId>
-  <version>1.3.6-SNAPSHOT</version>
+  <version>2.0.0</version>
   <packaging>bundle</packaging>
   <name>universAAL LDDI Exporter of KNX devices</name>
   <description>Hardware exporter of KNX Home Automation components for the universAAL middleware</description>
