--- a/lddi.pom/composite/pom.xml
+++ b/lddi.pom/composite/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>1.3.6-SNAPSHOT</version>
+    <version>2.0.0</version>
     <relativePath>../</relativePath>
   </parent>
   <artifactId>lddi.composite</artifactId>
-  <version>1.3.6-SNAPSHOT</version>
+  <version>2.0.0</version>
   <name>universAAL LDDI Composite</name>
   <description>Artifact responsible for generating composite file of universAAL lddi</description>
   <url></url>
