--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 lddi.continua.bluetooth/uaal/Continua[!!-~]manager[!!-~]service/continua.hdp.manager/.classpath
 lddi.continua.bluetooth/uaal/Continua[!!-~]manager[!!-~]service/continua.hdp.manager/.project
 lddi.continua.bluetooth/uaal/Continua[!!-~]manager[!!-~]service/continua.hdp.manager/.settings
+lddi.continua.bluetooth/uaal/continua.hdp.manager/.classpath
+lddi.continua.bluetooth/uaal/continua.hdp.manager/.project
+lddi.continua.bluetooth/uaal/continua.hdp.manager/.settings
 lddi.continua.bluetooth/uaal/ieee.x73.std/.classpath
 lddi.continua.bluetooth/uaal/ieee.x73.std/.project
 lddi.continua.bluetooth/uaal/ieee.x73.std/.settings
