--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.classpath
-lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.project
-lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.settings
-lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/target
+lddi.continua.bluetooth/uaal/continua.hdp.manager.caller/.classpath
+lddi.continua.bluetooth/uaal/continua.hdp.manager.caller/.project
+lddi.continua.bluetooth/uaal/continua.hdp.manager.caller/.settings
+lddi.continua.bluetooth/uaal/continua.hdp.manager.caller/target
 lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.classpath
 lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.project
 lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.settings
