--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@ lddi.continua.bluetooth/uaal/continua.hdp.manager.caller/.classpath
 lddi.continua.bluetooth/uaal/continua.hdp.manager.caller/.project
 lddi.continua.bluetooth/uaal/continua.hdp.manager.caller/.settings
 lddi.continua.bluetooth/uaal/continua.hdp.manager.caller/target
-lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.classpath
-lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.project
-lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.settings
-lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/target
+lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber/.classpath
+lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber/.project
+lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber/.settings
+lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber/target
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.classpath
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.project
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.settings
