--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+lddi.bluetooth/continua.hdp.manager.caller/.classpath
+lddi.bluetooth/continua.hdp.manager.caller/.project
+lddi.bluetooth/continua.hdp.manager.caller/.settings
+lddi.bluetooth/continua.hdp.manager.caller/target
 lddi.bluetooth/continua.hdp.manager/.classpath
 lddi.bluetooth/continua.hdp.manager/.project
 lddi.bluetooth/continua.hdp.manager/.settings
