--- a/lddi.bluetooth/continua.hdp.manager.subscriber/pom.xml
+++ b/lddi.bluetooth/continua.hdp.manager.subscriber/pom.xml
@@ -72,6 +72,11 @@
 		<groupId>org.universAAL.ontology</groupId>
 		<artifactId>ont.continuahealthmanager</artifactId>
 		<version>1.3.1-SNAPSHOT</version>
-	</dependency>		
+	</dependency>
+<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>1.4.0</version>
+		</dependency>	
 	</dependencies>		
 </project>
