--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ lddi.bluetooth/lddi.lib.ieeex73std/.classpath
 lddi.bluetooth/lddi.lib.ieeex73std/.project
 lddi.bluetooth/lddi.lib.ieeex73std/.settings
 lddi.bluetooth/lddi.lib.ieeex73std/target
+lddi.bluetooth/lddi.pom.bluetooth/target
 lddi.fs20/lddi.fs20.connector/.classpath
 lddi.fs20/lddi.fs20.connector/.project
 lddi.fs20/lddi.fs20.connector/.settings
