Added license headers

--- a/lddi.knx.devicemanager/launches/runner/configurations/services/lddi.knx.devicemanager.properties
+++ b/lddi.knx.devicemanager/launches/runner/configurations/services/lddi.knx.devicemanager.properties
@@ -1,4 +1,5 @@
 # Path to XML config file exported by ETS4
-knxConfigFile = data/OfficeProject7.knxproj
+#knxConfigFile = data/OfficeProject7.knxproj
 #knxConfigFile = data/LIVING_LAB_LST_WITHdatatypes.knxproj
 #knxConfigFile = data/LivingLab.knxproj
+knxConfigFile = data/KNX_Demowand-01.knxproj
