--- a/lddi.knx.devicemanager/conf/services/lddi.knx.devicemanager.properties
+++ b/lddi.knx.devicemanager/conf/services/lddi.knx.devicemanager.properties
@@ -1,2 +1,2 @@
 # Path to XML config file exported by ETS4
-knxConfigFile = data/OfficeProject6.knxproj
+knxConfigFile = data/KNX_Demowand-01.knxproj
